--- a/Introduction/introduction.org
+++ b/Introduction/introduction.org
@@ -2,7 +2,7 @@
 #+SUBTITLE: GRSS Summer School
 #+AUTHOR: Mathieu Fauvel
 #+EMAIL: mathieu.fauvel@ensat.fr
-#+DATE: [2017-04-26 Wed 08:30-10:00]
+#+DATE: [2017-04-26 Wed]--[2017-04-27 Thu]
 
 #+INCLUDE_TAGS: export
 #+EXCLUDE_TAGS: noexport
@@ -42,6 +42,7 @@
 #+LATEX_HEADER:\definecolor{c11}{rgb}{0.812,0,0}
 #+LATEX_HEADER:\definecolor{c12}{rgb}{0.5,0,0}
 
+#+LATEX_HEADER: \hypersetup{colorlinks,linkcolor=,urlcolor=magenta}
 
 *** Mathieu Fauvel                                                 :export:
 #+BEGIN_EXPORT latex
